--- a/wavetrack/src/main/res/drawable/option_border_thumb.xml
+++ b/wavetrack/src/main/res/drawable/option_border_thumb.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:left="-3dp" android:right="-3dp">
         <shape>
-            <stroke android:color="#ff0000" android:width="2dp" />
+            <stroke android:color="#b63c32" android:width="3dp" />
         </shape>
     </item>
-</selector>
+</layer-list>
