--- a/wavetrack/src/main/res/layout/track_selector_thumb.xml
+++ b/wavetrack/src/main/res/layout/track_selector_thumb.xml
@@ -59,8 +59,8 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:alpha=".6"
-                android:background="#777777"/>
+                android:alpha=".5"
+                android:background="#000000"/>
 
             <TextView
                 android:id="@+id/seek_span_text"
@@ -69,7 +69,8 @@
                 android:gravity="center"
                 android:text="10s"
                 android:textAlignment="center"
-                android:textColor="#ffffff"/>
+                android:textColor="#ffffff"
+                android:textSize="16sp"/>
         </FrameLayout>
 
         <!--drag right arrow-->
